firmware/lib/control-table/tests/ui/flat_access_reserved.stderr
error: `access = reserved` is gone; use `skip` for padding fields
 --> tests/ui/flat_access_reserved.rs:6:25
  |
6 |     #[ct_field(access = reserved)]
  |                         ^^^^^^^^
