firmware/lib/control-table/tests/ui/flat_access_reserved.rs
use control_table::FlatBlock;

#[repr(C)]
#[derive(FlatBlock)]
struct BadReserved {
    #[ct_field(access = reserved)]
    x: u8,
}

fn main() {}
